--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - python -m spacy download en_core_web_
+  - python -m spacy download en_core_web_lg
 script:
   - cd src && python tests.py
